# passcheck

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generator_test
include/clovo/: analyzer.h  comparison.h  export.h  generator.h  policy.h  ui.h
include/passcheck/: analyzer.h  validator.h
include/slovo/: analyzer.h  generator.h  ui.h
lib/: README.md
src/: analyzer.c  comparison.c  export.c  generator.c  main.c  policy.c  ui.c  validator.c
tests/: test_analyzer.c  test_generator.c
